# math-frontier-eval

./: .gitignore  README.md  benchmark.py  config.yaml  grading.py  math_retriever.py  pyproject.toml
data/: eval_datasets.py
data/imobench/: answerbench_v2.csv
prompts/: answerbench.txt  answerbench_run.txt  filtering.txt  gradingbench.txt  gradingbench_gt.txt  proofbench.txt  proofbench_proofbench.txt  proofbench_run.txt
prompts/gradingbench/: dict-to-string.txt  general-gt.txt  general-no-gt.txt  gimo-gt.txt  gimo-no-gt.txt  opc-gt.txt  opc-no-gt.txt  original-gt.txt  original-no-gt.txt  proofbench-gt.txt  proofbench-no-gt.txt  proofbench-strict-gt.txt  proofbench-strict-no-gt.txt
retrievers/: bm25_retrieval.py  evo_algebra_hard_fusion.py  evo_combined_routing_diversity.py  evo_deepmath_hard_augment.py  evo_domain_conditional_secondary.py  evo_geo_proof_curated_index.py  evo_geo_solution_indexed.py  evo_openmath_geo_proof_branch.py  evo_proof_answer_split.py  evo_proof_split_or_max_diversity.py  no_memory.py  random_fewshot.py
tests/: test_retrievers.py
